force-app/main/default/objects/Asset/fields/Booth_Dimension__c.field-meta.xml
<CustomField>
    <fullName>Booth_Dimension__c</fullName>
    <description>Shows dimension of booth</description>
    <label>Booth Dimension</label>
    <length>100</length>
    <type>Text</type>
</CustomField>