force-app/main/default/objects/Asset/fields/Booth_Hall__c.field-meta.xml
<CustomField>
    <fullName>Booth_Hall__c</fullName>
    <description>Display booth hall</description>
    <label>Booth Hall</label>
    <length>100</length>
    <type>Text</type>
</CustomField>