force-app/main/default/objects/Asset/fields/Booth_Number__c.field-meta.xml
<CustomField>
    <fullName>Booth_Number__c</fullName>
    <description>Booth Number displays the booth address</description>
    <label>Booth Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>