force-app/main/default/objects/Asset/fields/Booth_Pavillion__c.field-meta.xml
<CustomField>
    <fullName>Booth_Pavillion__c</fullName>
    <description>Displays Booth Pavillion</description>
    <label>Booth Pavillion</label>
    <length>100</length>
    <type>Text</type>
</CustomField>