force-app/main/default/objects/Asset/fields/Booth_Product_Type1__c.field-meta.xml
<CustomField>
    <fullName>Booth_Product_Type1__c</fullName>
    <label>Booth/Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Booth_Product_Type1</valueSetName>
    </valueSet>
</CustomField>