force-app/main/default/objects/Asset/fields/Booth_Status__c.field-meta.xml
<CustomField>
    <fullName>Booth_Status__c</fullName>
    <description>Booth status.</description>
    <label>Booth Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Onhold</fullName>
            </value>
            <value>
                <fullName>Released</fullName>
            </value>
            <value>
                <fullName>Rented</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>