force-app/main/default/objects/Asset/fields/Edition__c.field-meta.xml
<CustomField>
    <fullName>Edition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup relation</description>
    <label>Edition</label>
    <referenceTo>Edition__c</referenceTo>
    <relationshipLabel>Assets</relationshipLabel>
    <relationshipName>Assets</relationshipName>
    <type>Lookup</type>
</CustomField>