force-app/main/default/objects/Asset/fields/Exhibiting_Name__c.field-meta.xml
<CustomField>
    <fullName>Exhibiting_Name__c</fullName>
    <description>This field will be populated from EMEA through Mulesoft</description>
    <label>Exhibiting Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>