force-app/main/default/objects/Asset/fields/Legacy_Asset_Id__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Asset_Id__c</fullName>
    <label>Legacy Asset Id</label>
    <length>200</length>
    <type>Text</type>
</CustomField>