force-app/main/default/objects/Asset/fields/Legacy_CRM_Instance__c.field-meta.xml
<CustomField>
    <fullName>Legacy_CRM_Instance__c</fullName>
    <label>Legacy CRM Instance</label>
    <length>250</length>
    <type>Text</type>
</CustomField>