force-app/main/default/objects/Asset/fields/Open_corners__c.field-meta.xml
<CustomField>
    <fullName>Open_corners__c</fullName>
    <label>Open corners</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>