force-app/main/default/objects/Asset/fields/Operations_Contact__c.field-meta.xml
<CustomField>
    <fullName>Operations_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This will be captured through mulesoft batch job</description>
    <label>Operations Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Assets</relationshipLabel>
    <relationshipName>Assets</relationshipName>
    <type>Lookup</type>
</CustomField>