force-app/main/default/objects/Asset/fields/Progressing_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Progressing_Error_Message__c</fullName>
    <description>Progressing Error Message of Asset Batch Job</description>
    <label>Progressing Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>