force-app/main/default/objects/Asset/fields/Progressing_Status__c.field-meta.xml
<CustomField>
    <fullName>Progressing_Status__c</fullName>
    <description>Progressing Status of Asset Batch Job</description>
    <label>Progressing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
                <default>true</default>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>