force-app/main/default/objects/Asset/fields/Purchase_Data__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Data__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Purchase Data</label>
    <referenceTo>Purchase_Data__c</referenceTo>
    <relationshipLabel>Assets</relationshipLabel>
    <relationshipName>Assets</relationshipName>
    <type>Lookup</type>
</CustomField>