force-app/main/default/objects/Asset/fields/Share_Co_exhibitor__c.field-meta.xml
<CustomField>
    <fullName>Share_Co_exhibitor__c</fullName>
    <label>Share / Co-exhibitor</label>
    <length>100</length>
    <type>Text</type>
</CustomField>