force-app/main/default/objects/Asset/fields/Source_Id__c.field-meta.xml
<CustomField>
    <fullName>Source_Id__c</fullName>
    <description>Displays source ID</description>
    <externalId>true</externalId>
    <label>Source Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>