force-app/main/default/objects/Asset/fields/Source_Org__c.field-meta.xml
<CustomField>
    <fullName>Source_Org__c</fullName>
    <description>Shows destination org</description>
    <label>Source Org</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>GE</fullName>
            </value>
            <value>
                <fullName>Penton</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>