force-app/main/default/objects/Asset/fields/Unit_Of_Measurement__c.field-meta.xml
<CustomField>
    <fullName>Unit_Of_Measurement__c</fullName>
    <label>Unit Of Measurement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>m</fullName>
                <default>true</default>
                <label>Meter</label>
            </value>
            <value>
                <fullName>ft</fullName>
                <label>Feet</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>