force-app/main/default/objects/Asset/fields/Width__c.field-meta.xml
<CustomField>
    <fullName>Width__c</fullName>
    <label>Width</label>
    <length>50</length>
    <type>Text</type>
</CustomField>