force-app/main/default/objects/Asset/listViews/AllAssets.listView-meta.xml
<ListView>
    <fullName>AllAssets</fullName>
    <columns>ASSET.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.NAME</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>User_Type1__c</columns>
    <columns>ASSET.STATUS</columns>
    <columns>Booth_Number__c</columns>
    <columns>ASSET.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Booth_Number__c</field>
        <operation>equals</operation>
        <value>IF.3450</value>
    </filters>
    <label>All Assets</label>
</ListView>